# fictionsuit

./: .dockerignore  .gitignore  Dockerfile  README.md  api.py  bsky.py  cli.py  config.py  fly.toml  index.ann  main.py  prompts.py  pyproject.toml
fictionsuit/: bot.py  chains.py  config.py  core.py  main.py  prompts.py  utils.py
fictionsuit-vscode-ext/: reinstall
fictionsuit-vscode-ext/fictionscript-syntax/: CHANGELOG.md  README.md  fictionscript-syntax-0.0.1.vsix  language-configuration.json  package.json  vsc-extension-quickstart.md
fictionsuit-vscode-ext/fictionscript-syntax/syntaxes/: backup  fictionscript.tmLanguage.json
fictionsuit/api_wrap/: __init__.py  bluesky.py  discord.py  huggingface.py  openai.py  user_message.py
fictionsuit/commands/: __init__.py  basics.py  chat.py  command_group.py  debug.py  discord_only.py  failure.py  meta.py  methods.py  mpt.py  research.py  scripting.py  text.py  webui.py
fictionsuit/core/: __init__.py  api_client.py  basic_command_system.py  cli.py  core.py  system.py  user_message.py
fictionsuit/core/fictionscript/: __init__.py  fictionscript.py  schematize.py  scope.py  script_message.py  varscope.py
fictionsuit/db/: search.py  simplersupa.py  supa.py  supa_client.py  supa_tools.py
fictionsuit/documents/articles/: Hootie and the European Land War.md  (+3 more)
fictionsuit/fic/: README.md  auto_face.fic  first_person.fic  help.fic  helper.fic  query.fic  save_chat.fic  summon.fic  tests.fic  yes_or_no.fic
ui/: .babelrc  package-lock.json  package.json
ui/src/: app.html  coordinator.ts  message.ts  wiring.ts
(+51 files in other folders)
